--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "nostr-tools": "^2.1.1",
-    "websocket-polyfill": "^0.0.3",
+    "websocket-polyfill": "^0.0.3"
   },
   "engines": {
     "node": ">=16"
