--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Yonle/nhttp#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "express": "^4.18.2",
     "nostr-tools": "^2.1.1",
     "websocket-polyfill": "^0.0.3"
